post-tags(css) : fix spacing

--- a/assets/css/post-single.css
+++ b/assets/css/post-single.css
@@ -236,7 +236,7 @@
 }
 
 .post-tags li+li {
-    margin-left: 3px;
+    margin-bottom: 3px;
 }
 
 .post-tags a {
